<resources>
    <string name="app_name">ZocNutAssignment1</string>
    <string name="hint_email_id">Enter your Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="please_enter_valid_email">*Please enter valid email</string>
    <string name="email_id">Email Id</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="please_enter_valid_password">*Please enter valid password</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="new_here_signup">New Here? Signup</string>
    <string name="user_login">User Login</string>
    <string name="register">Register</string>
    <string name="signup">SignUp</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="home">Home</string>
    <string name="aaditya_kumar_verma">Aaditya Kumar Verma</string>
    <string name="colon">:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="share_qr">Share QR</string>
    <string name="qr_code">QR Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_7238854361">7238854361</string>
    <string name="male">Male</string>
    <string name="raushankv217_gmail_com">raushankv217@gmail.com</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="zoco_logo">Zoco Logo</string>
    <string name="contact_list_icon">Contact List Icon</string>
    <string name="back_icon">Back Icon</string>
    <string name="save_as_contact">Save As Contact</string>
    <string name="scan_this_qr_code">Scan this QR Code</string>
</resources>