<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/zoco_orange"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivContactList"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:contentDescription="@string/contact_list_icon"
            android:src="@drawable/contacts_list" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_5sdp"
            android:contentDescription="@string/zoco_logo"
            android:src="@drawable/zoconut_icon" />

        <ImageView
            android:id="@+id/ivQRScanner"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/qr_scanner"
            android:src="@drawable/qr_scanner" />

    </androidx.cardview.widget.CardView>

    <TextView

        android:id="@+id/tvHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvActionBar"
        />
<com.google.android.material.imageview.ShapeableImageView
    android:id="@+id/ivProfile"
    android:layout_width="@dimen/_70sdp"
    android:layout_height="@dimen/_70sdp"
    android:scaleType="centerCrop"
    android:elevation="@dimen/_5sdp"
    android:src="@drawable/aaditya_pic"
    app:shapeAppearance="@style/Circular"
    android:layout_marginTop="@dimen/_10sdp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvHome"
    />
    <LinearLayout
        android:id="@+id/llProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ll_bg"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="2"
                android:id="@+id/tvNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/aaditya_kumar_verma"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD8D8"
            android:layout_marginVertical="@dimen/_5sdp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:id="@+id/tvEmailValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/raushankv217_gmail_com"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD8D8"
            android:layout_marginVertical="@dimen/_5sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:id="@+id/tvGnederValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/male"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD8D8"
            android:layout_marginVertical="@dimen/_5sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:id="@+id/tvPhoneValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/_7238854361"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_btn_bg"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/_10sdp"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_5sdp"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llProfileDetails"
        >
        <ImageView
            android:id="@+id/ivProfileQR"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/qr_code"
            android:src="@drawable/my_details_qr"
            android:scaleType="centerCrop" />
        <FrameLayout
            android:id="@+id/flShareQR"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_btn_bg">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShareQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/zoco_orange"
                android:drawableStart="@drawable/share_icon"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:outlineAmbientShadowColor="@color/dull_white"
                android:outlineSpotShadowColor="@color/dull_white"
                android:shadowColor="@color/black"
                android:text="@string/share_qr"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"/>
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>