<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardViewerActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/cvActionBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/zoco_orange"
        >
        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/arrow_back" />


        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:src="@drawable/zoconut_icon"/>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:scaleType="centerCrop"
        android:elevation="@dimen/_5sdp"
        android:src="@drawable/aaditya_pic"
        app:shapeAppearance="@style/Circular"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvActionBar"
        />
    <LinearLayout
        android:id="@+id/llProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ll_bg"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_10sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="2"
                android:id="@+id/tvNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/aaditya_kumar_verma"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD8D8"
            android:layout_marginVertical="@dimen/_5sdp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:id="@+id/tvEmailValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/raushankv217_gmail_com"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD8D8"
            android:layout_marginVertical="@dimen/_5sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:id="@+id/tvGnederValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/male"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DAD8D8"
            android:layout_marginVertical="@dimen/_5sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <TextView
                android:layout_weight="3"
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/colon"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:id="@+id/tvPhoneValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:text="@string/_7238854361"
                android:textColor="@color/black"
                android:gravity="start"
                android:fontFamily="@font/roboto_regular"
                />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveAsContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_as_contact"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>